[gd_scene load_steps=2 format=3 uid="uid://btd82dc6mm6tb"]

[ext_resource type="Script" path="res://components/draggable/draggable.gd" id="1_odowi"]

[node name="Draggable" type="Area2D"]
script = ExtResource("1_odowi")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
